--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>StockOasis...the future could be bright.</h1>
+<h1>Oasis...the future could be bright.</h1>
 <p></p>
 </body>
 </html>
