--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+<BODY BACKGROUND="ArcanumRED-F.png" BGPROPERTIES="fixed">
 <h1>Oasis...the future could be bright.</h1>
 <p></p>
 </body>
